# mindority_report

./: .gitignore  README.md  dataflow.yml  draw.py  hand_rec.py  main.py  plot.py  pyproject.toml  start.sh  stop.sh  train_handedness.py  webcam.py
frontend/: package-lock.json  package.json  server.cjs
frontend/src/: App.jsx
hand_rec/: README.md  pyproject.toml
hand_rec/hand_rec/: hand_rec.py  main.py
hand_rec/tests/: test_hand_rec.py
src/: draw.py  filter.py  hand_rec.py  torch_mediapipe_demo.py  webcam.py
src/torch_mediapipe/: blazehand_handedness_cls.pth  blazehand_handedness_cls_2.pth  blazepose.py  visualization.py
torch_mediapipe/: blazehand_landmark.py
