[project]
name = "hand_rec"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "hand_rec"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["dora-rs >= 0.3.9"]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
hand_rec = "hand_rec.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
